--- a/rust/Anchor.toml
+++ b/rust/Anchor.toml
@@ -8,6 +8,12 @@ wallet = "~/.config/solana/id.json"
 [programs.mainnet]
 nft_candy_machine = "cndyAnrLdpjq1Ssp1z8xxDsB8dxe7u4HL5Nxi2K5WXZ"
 
+[programs.devnet]
+nft_candy_machine = "H5T5J6FagzN181JZZURyoypLmTz5wZ4NpNxXWL4tZQ69"
+
+[programs.localnet]
+nft_candy_machine = "H5T5J6FagzN181JZZURyoypLmTz5wZ4NpNxXWL4tZQ69"
+
 [scripts]
 test = "ts-mocha -p ./tsconfig.json -t 1000000 test/*.ts"
 
